[PROJECTS] fix rendering issue on IOS

--- a/front/css/panels-projects/projects-main.styl
+++ b/front/css/panels-projects/projects-main.styl
@@ -113,10 +113,10 @@
     content '×'
     font-weight bold
     text-indent 0
-    width: 1em;
-    height: 1em;
-    text-align: center;
-    line-height: .75em;
+    width 1em
+    height 1em
+    text-align center
+    line-height .75em
 
   .{activeClass} &
     opacity 1
